Add education and some styles

--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   <meta charset="utf-8">
   <title>Resume</title>
   <link href="css/style.css" rel="stylesheet">
-<!--
-  Uncomment the <script> tag below when you're ready to add an interactive Google Map to your resume!
-  -->
-<!-- <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script> -->
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100,100i,300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
+<script src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyD7OV0ZibC9N8n7lTSqOZlEQp4rR8ZCkfM"></script> 
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
